--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: List files in Docker context
+      run: ls -l ./Project/Airlines
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
