--- a/Project/Airlines/Dockerfile
+++ b/Project/Airlines/Dockerfile
@@ -1,22 +1,3 @@
-# FROM maven:3.6.0-jdk-11-slim AS build
-# WORKDIR /build
-# COPY pom.xml .
-# COPY src ./src
-# COPY web ./web
-# RUN mvn clean package
-
-# #
-# # Package stage
-# #
-# FROM tomcat:8.5.72-jre11-openjdk-slim
-# COPY tomcat-users.xml /usr/local/tomcat/conf
-# COPY --from=build /build/target/*.war /usr/local/tomcat/webapps/FlightBookingSystemSample.war
-# EXPOSE 8080
-# CMD ["catalina.sh", "run"]
-
-
-
-
 FROM maven:3.6.0-jdk-11-slim AS build
 WORKDIR /build
 COPY pom.xml .
@@ -28,7 +9,11 @@ RUN mvn clean package
 # Package stage
 #
 FROM tomcat:8.5.72-jre11-openjdk-slim
-COPY Project/Airlines/tomcat-users.xml /usr/local/tomcat/conf/
+COPY tomcat-users.xml /usr/local/tomcat/conf
 COPY --from=build /build/target/*.war /usr/local/tomcat/webapps/FlightBookingSystemSample.war
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
+
+
+
+
